# Scraps

./: .gitignore  CMakeLists.txt  README.md
C++/DesignPattern/: singleton.cpp
C++/LFCLHT-master/: .gitignore
C++/LFCLHT-master/include/libpmemobj++/: pool.hpp
C++/LFCLHT-master/include/libpmemobj++/detail/: compound_pool_ptr.hpp
C++/LFCLHT-master/include/libpmemobj++/experimental/: cceh.hpp  clevel_hash.hpp  concurrent_hash_map.hpp  lf_clht-concurrent_resizing.hpp  lf_clht.hpp
C++/LFCLHT-master/tests/: CMakeLists.txt  polymorphic_string.h  profile.hpp
C++/LFCLHT-master/tests/cceh/: cceh_ycsb.cpp
C++/LFCLHT-master/tests/clevel_hash/: clevel_hash_resize.cpp  clevel_hash_ycsb.cpp
C++/LFCLHT-master/tests/clht/: clht_resize.cpp  clht_ycsb.cpp
C++/LFCLHT-master/tests/concurrent_hash_map/: concurrent_hash_map_resize.cpp  concurrent_hash_map_ycsb.cpp
C++/LFCLHT-master/tests/level_hash/: level_hash_resize.cpp  level_hash_ycsb.cpp
C++/LFCLHT-master/tests/lfclht/: lfclht_cli.cpp  lfclht_resize.cpp  lfclht_ycsb.cpp  lfclht_ycsb_macro.cpp
C++/basic/: basic.cpp  fileop.cpp  random_example.cpp  right_value.S  right_value.cpp
C++/leetcode/: 138copyRandomList.cpp  169majorityElement.cpp  206reverseList.cpp  CMakeLists.txt  array.cpp  backtrack.cpp  binaryTree.cpp  dp.cpp  find_nearest_prime.cpp  greedy.cpp  helper.h  in.cpp  likely.s  list.cpp  main.cpp  normal.cpp  slide_window.cpp  sort.cpp  stack_queue.cpp  string.cpp  test.cpp  tmp.cpp  touch.c  tree.cpp  unlikely.s
C++/stl_container/: ringbuffer.cpp  test_vector_size.cpp  vector_free.cpp
C++/threads/: memory_barrier.cpp  memory_order.cpp  rwlatch.h  thread.cpp  uint8.cpp
C/gcc/: .gitignore  Makefile  affinity.c  align.c  assembly.c  assembly.h  atomic.h  benchmark.h  builtin.c  dotproduct.c  dotproduct_aligin_compare.txt  dotproduct_compare.txt  flexible.c  getenv.c  likely.c  plot_heart.c  thread_pool_simple.c
C/intel_tsc/: benchmarking.c  tsc.h  write_combining_buffer.c
C/linux/: child.c
C/pmdk/: pmemobjcpp
C/pmdk/libpmem/: test.c  test.sh
C/pmdk/pmemobj/: buffer_size.c  reader.c  writer-tx.c  writer.c
C/shell/: memory.sh  test.sh
C/simd/: simd_benchmark.c  test.sh
C/structure/: Makefile  bTree.c  testBTree.c
C/util/: hash.c
Config/: .bashrc  .zshrc  FengYeConfig.yml  WechatBot.sh  c.json  color.sh  cpp.json  eudic.xml  init.sh  setting.json  shellscipt.json
Python/: color.py  data1.xlsx  data2.xlsx  data3.xlsx  hatch.py  helper.py  stack_group_plot.py  test.py
Python/funds/: .ipynb  001186.js  README  funds.py  funds_crap_export.ipynb  version0-1.py  version_a.ipynb
Python/funds/.ipynb_checkpoints/: funds_crapy-checkpoint.ipynb  version_a-checkpoint.ipynb
Python/funds/data/: 000216.txt  000614.txt  000968.txt  001180.txt  003765.txt  004752.txt  100032.txt  100038.txt  161017.txt  162411.txt  FRB_H15.csv  WTI原油期货历史数据.csv  funds_name.txt
Python/funds/trade/: fund-cost.txt  fund_trade_history.txt
Python/funds/util/.ipynb_checkpoints/: mail-checkpoint.ipynb
Tests/: convert.py  get_zoned_device_info.sh  zns_write_concur.sh
